--- a/Aftermath/css/app.css
+++ b/Aftermath/css/app.css
@@ -12,6 +12,8 @@ body{
 	color: red;
 	text-align: center;
 	font-size: 18px;
+	margin-top: 6px;
+	margin-bottom: -6px;
 }
 
 .ceiling{
@@ -70,11 +72,52 @@ img{
 
 .button{
 	min-width: 100%;
-	margin: auto auto;
+	margin: 0 auto;
 	height: 6.5vh;
 	font-family: impact;
-	font-size-adjust: 0.85;
+	font-size-adjust: 0.7;
 	background-color: orange;
 	color: black;
 }
 
+.incbutton{
+	background-color: orange;
+	color: black;
+	float: left;
+	display: inline-block;
+	min-width: 10%;
+	min-height: 6vh;
+}
+
+.decbutton{
+	background-color: orange;
+	color: black;
+	float:left;
+	display: inline-block;
+	min-width: 10%;
+	min-height: 6vh;
+}
+
+table{
+	width: 100%;
+
+}
+
+td{
+	text-align: center;
+	border: 1px solid black;
+	width: 12.5%;
+	background-color: #EEE;
+}
+
+input{
+	text-align: center;
+	display: inline-block;
+}
+
+.trait{
+	text-align: center;
+	display: inline-block;
+	float: left;
+	max-width: 80%;
+}
